[project]
name = "pyutils"
version = "0.0.12"
authors = [
  { name="Scott Gasch", email="scott.gasch@gmail.com" },
]
description = "Python Utilities"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "antlr4-python3-runtime==4.12.0",
    "bitstring",
    "cloudpickle",
    "holidays",
    "kazoo",
    "overrides",
    "pytz",
    "requests",
]

[project.urls]
"Homepage" = "https://wannabe.guru.org/pydocs/pyutils/pyutils.html"
"Bug Tracker" = "https://github.com/scottgasch/pyutils/issues"
"Repository" = "https://github.com/scottgasch/pyutils"
"Documentation" = "https://wannabe.guru.org/pydocs/pyutils/pyutils.html"
"Changelog" = "https://github.com/scottgasch/pyutils/blob/main/release_notes.md"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8",
    "pylint",
    "sphinx"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "pyutils", "pyutils.collectionz", "pyutils.compress",
    "pyutils.datetimes", "pyutils.files", "pyutils.parallelize",
    "pyutils.search", "pyutils.security", "pyutils.typez"
]

[tool.setuptools.package-dir]
pyutils = "src/pyutils"
